# timescaledb_sandbox

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yaml  todo.md
mock_devices/: .dockerignore  Dockerfile
mock_devices/diamond_square_lib/: Cargo.toml
mock_devices/diamond_square_lib/src/: diamond_square.rs  lib.rs
mock_devices/mock_devices_rust_app/: Cargo.toml
mock_devices/mock_devices_rust_app/src/: main.rs  mock_device.rs
timescaledb/: .dockerignore  003_init.sql  003_init_mockdevices.sql  004_seed_data_from_csv.sql  Dockerfile
timescaledb/sql_files/: nyc_data.sql
