[package]
name = "mock_devices_rust_app"
version = "0.1.0"
authors = ["Kurt Strecker <kurt@kurtstrecker.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

sqlx = { version = "0.5", features = [ "postgres", "runtime-async-std-native-tls" ] }
async-std = { version = "1.6", features = [ "attributes" ] }