[package]
name = "mock_devices_rust_app"
version = "0.1.0"
authors = ["Kurt Strecker <kurt@kurtstrecker.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diamond_square_lib = { path = "../diamond_square_lib" }
async-std = { version = "1.6", features = [ "attributes" ] }
chrono = "0.4"
csv = "1.1"
rand = "0.6.5"
sqlx = { version = "0.5", features = [ "postgres", "runtime-async-std-native-tls" ] }
uuid = { version = "0.8", features = ["v4"] }